--- a/TODO
+++ b/TODO
@@ -7,4 +7,4 @@ TODO
 - Admin zone, to edit user accounts and see the log
 - Tree view: some JavaScript for showing/hiding nodes
 - Improve CSS
-- Add/remove icons
+- Add/remove icons form
