--- a/TODO
+++ b/TODO
@@ -1,10 +1,15 @@
 TODO
 
+- User form: two password fields
+- User form: error if user already taken
+- User account: edit password (strong password required)
+- Login page: create new account (the admin can enable it afterwards)
+- Write installation instructions
+- Better user password hashing (with a salt, and several iterations)
+
 - For the name of nodes, show a list of existing names, with a possibility to add a new name
 - Encrypt/decrypt passwords
-- Flexible authentication system to the application (fallback to simple login/password)
 - Log the accesses
-- Admin zone, to edit user accounts and see the log
 - Tree view: some JavaScript for showing/hiding nodes
 - Improve CSS
 - Add/remove icons form
