--- a/README
+++ b/README
@@ -3,11 +3,15 @@ UCL WebKeyPass
 A simple web application for storing passwords and other pieces of
 information about servers.
 
-The servers and their virtual machines can be categorized by operating
-systems. A hierarchy is displayed in a side panel.
+The servers and their virtual machines can be categorized (e.g. by
+operating systems). A hierarchy is displayed in a side panel. Misc nodes
+can also be added. This can be useful for licenses, web sites, databases
+or other things.
+
+To access the data, a login is necessary. There is a form to create a
+user. A user can be a normal user or an admin. Admins have access to an
+admin zone, where they can activate or edit other user accounts, and see
+a log of logins/logouts by month.
 
 The Symfony 2 PHP web framework is used. This repository contains only a
 bundle.
-
-WARNING: the development has just started, you won't get a full-featured
-application!
