Show message on session timeout
More complicated than expected, finally it is simpler to use the PHP
function setcookie() than using the Symfony API…

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 TODO
 
 - New setting: session timeout duration
-- Show message on session timeout
+- Comment/Information field: parse URLs
 - Improve CSS
