--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO
 
-- Comment/Information field: parse URLs
+- More documentation
+- When account created with Shibboleth, show the private key
 - Improve CSS
